[package]
name = "bunch_of_gits"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.1", features = ["derive"] }
directories = "5.0.1"
serde = "1.0.163"
serde_derive = "1.0.163"
toml = "0.7.4"
