[package]
name = "bunch_of_gits"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
clap = { version = "4.3.1", features = ["derive"] }
directories = "5.0.1"
lazy_static = "1.4.0"
regex = "1.9.1"
serde = "1.0.163"
serde_derive = "1.0.163"
toml = "0.7.4"
